<resources>
    <string name="app_name">QRunlockclientapp</string>
    <string name="scan_the_qr_code">Scan the QR code of event assistant  in order to enter the event</string>
    <string name="scan_qr_code">Verify Attendance</string>
    <string name="msg_no_ticket_found">No ticket found. Please go to https://t.me/QRUnlockBot</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_time_start">Time start</string>
    <string name="lbl_zone">zone</string>
    <string name="lbl_name">name</string>

    <string name="image_description">icon image</string>
    <string name="quickie_scan_qr_code">Scan QR code</string>
    <string name="quickie_please_wait">Please wait…</string>
    <string name="message_error">Error message…</string>
    <string name="place_the_qr_code_in_the_indicated_rectangle">Place the QR Code in the indicated frame</string>
    <string name="ok">Ok</string>
</resources>